Add cache, payout and many improvements.

--- a/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
+++ b/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
@@ -1,15 +1,25 @@
 [cardTypes]
-CB_VISA_MASTERCARD		= "CB_VISA_MASTERCARD"
+CB_VISA_MASTERCARD		= "Visa/MasterCard"
 AMEX					= "AMEX"
-DINERS					= "DINERS"
+DINERS					= "Diners"
 MASTERPASS				= "MASTERPASS"
-MAESTRO					= "MAESTRO"
+MAESTRO					= "Maestro"
 P24						= "P24"
 IDEAL					= "IDEAL"
 BCMC					= "BCMC"
 PAYLIB					= "PAYLIB"
 
-
+[cardProviders]
+VISA					= "Visa"
+MASTERCARD				= "MasterCard"
+AMEX					= "American Express"
+MAESTRO					= "Maestro"
+DINERS					= "Diners"
+MASTERPASS				= "MASTERPASS"
+P24						= "P24"
+IDEAL					= "IDEAL"
+BCMC					= "BCMC"
+PAYLIB					= "PAYLIB"
 
 [add]
 heading					= ""
