Improve controllers, views and templates heavily.

--- a/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
+++ b/Manage/My/Mangopay/locales/de/manage/my/mangopay/card.ini
@@ -1,7 +1,7 @@
 [cardTypes]
 CB_VISA_MASTERCARD		= "Visa/MasterCard"
-AMEX					= "AMEX"
-DINERS					= "Diners"
+AMEX					= "American Express"
+DINERS					= "Diners Club"
 MASTERPASS				= "MASTERPASS"
 MAESTRO					= "Maestro"
 P24						= "P24"
@@ -14,7 +14,7 @@ VISA					= "Visa"
 MASTERCARD				= "MasterCard"
 AMEX					= "American Express"
 MAESTRO					= "Maestro"
-DINERS					= "Diners"
+DINERS					= "Diners Club"
 MASTERPASS				= "MASTERPASS"
 P24						= "P24"
 IDEAL					= "IDEAL"
