Add helper for card and wallet.

--- a/Resource/Payment/Mangopay/locales/de/resource/payment/mangopay/error.ini
+++ b/Resource/Payment/Mangopay/locales/de/resource/payment/mangopay/error.ini
@@ -5,7 +5,14 @@
 001011		= "Transaction amount is higher than maximum permitted amount"
 001012		= "Transaction amount is lower than minimum permitted amount"
 001013		= "Invalid transaction amount"
-001014		= "CreditedFunds must be more than 0 (DebitedFunds can not equal Fees)""
+001014		= "CreditedFunds must be more than 0 (DebitedFunds can not equal Fees)"
+
+[technical]
+009103		= "PSP configuration error"
+009199		= "PSP technical error"
+009499		= "Bank technical error"
+009999		= "Technical error"
+009101		= "PSP timeout please try later"
 
 [payin_web]
 001030		= "User has not been redirected"
@@ -79,3 +86,20 @@
 09104		= "Client certificate is disabled"
 09201		= "You do not have permissions to make this API call"
 02631		= "Delay exceeded"
+
+[payout]
+121999		= "Generic withdrawal error"
+121001		= "The bank wire has been refused"
+121002		= "The author is not the wallet owner"
+121003		= "Insufficient wallet balance"
+121004		= "Specific case: please contact our Support Team"
+121005		= "Refused due to the Fraud Policy"
+121006		= "The associated bank account is not active"
+002998		= "Blocked due to the Bank Account Owner’s KYC limitations (maximum debited or credited amount reached)"
+002999		= "Blocked due to a Debited User’s KYC limitations (maximum debited or credited amount reached)"
+
+[KYC]
+
+[KYC_document]
+
+[fraud]
